# heart-beat2

./: .flutter-plugins-dependencies  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.json  PLAN.md  PLAN_coaching.md  PLAN_debug_server.md  PLAN_dev_workflow.md  PLAN_diagnosis_gui.md  PLAN_logging.md  README.md  build-android.sh  findings.json  flutter_rust_bridge.yaml  pubspec.yaml  test_plan.json
.dart_tool/: package_config.json  package_graph.json
.soak-logs/: soak_20260425_012655_metrics.txt  soak_health_20260427_044240_metrics.txt  soak_health_20260427_045132_metrics.txt  soak_health_20260427_045310_metrics.txt
android/: local.properties
docs/: DEBUG_GUIDE.md  DEVELOPER-GUIDE.md  LATENCY-MEASUREMENT.md  LATENCY-VALIDATION.md  (+10 more)
rust/: Cargo.toml  setup-ble.sh  tarpaulin.toml
rust/.cargo/: config.toml
rust/benches/: latency_bench.rs
rust/coverage/: cobertura.xml  tarpaulin-report.html
rust/docs/plans/: 5k-training.json  README.md  beginner-base-building.json  marathon-pace.json  recovery-run.json
rust/examples/: README.md  basic_scan.rs  custom_notifier.rs  mock_session.rs  stream_hr.rs
rust/src/: api.rs  debug_http.rs  frb_generated.rs  jni_loader.rs  lib.rs  logging.rs
rust/src/adapters/: README.md  btleplug_adapter.rs  cli_notification_adapter.rs  file_session_repository.rs  mock_adapter.rs  mock_notification_adapter.rs  mod.rs
rust/src/coaching/: cue.rs  mod.rs  rule.rs
rust/src/domain/: README.md  adaptive.rs  analytics.rs  battery.rs  export.rs  export_formats.rs  filters.rs  heart_rate.rs  hrv.rs  mod.rs  periodization.rs  readiness.rs  reconnection.rs  resting_hr.rs  session_history.rs  session_progress.rs  training_load.rs  training_plan.rs  workout_library.rs
rust/src/hr_store/: mod.rs
rust/src/ports/: README.md  ble_adapter.rs  mod.rs  notification.rs  session_repository.rs
rust/src/scheduler/: README.md  executor.rs  mod.rs
rust/src/state/: README.md  connectivity.rs  mod.rs  session.rs
rust/tests/: kalman_integration.rs  latency_test.rs  pipeline_integration.rs  session_history_test.rs  state_machine_integration.rs
(+507 files in other folders)
