[package]
name = "heart-beat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
flutter_rust_bridge = "=2.11.1"
btleplug = "0.11"
kalman_filters = "1.0"
statig = "0.3"
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
colored = "2"
comfy-table = "7"
crossterm = "0.27"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "5"

[dependencies.serde_json]
version = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
jni-utils = "0.1.1"
ndk-context = "0.1"
android_logger = "0.13"
log = "0.4"

[dev-dependencies]
mockall = "0.13"
proptest = "1.5"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "latency_bench"
harness = false

[profile.release]
panic = "abort"  # Reduce binary size by removing panic unwinding machinery
opt-level = 3    # Maximum optimization
lto = true       # Link-time optimization for smaller binaries
codegen-units = 1  # Better optimization at cost of compile time
